--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "version": "0.1.0",
   "unity": "6000.1",
   "description": "This package contains Screen Fades for Unity Projects.",
-  "keywords": [ "Screen" ],
-  "dependencies": {},
+  "keywords": [
+    "Screen"
+  ],
+  "dependencies": {
+    "com.actioncode.awaitable-system": "1.0.0"
+  },
   "license": "MIT",
   "homepage": "https://github.com/HyagoOliveira/ScreenFadeSystem#readme",
   "repository": {
